[package]
name = "dlipower"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/dlipower"
description = "Crate to manage Digital Loggers Web Power Switches"


[dependencies]
reqwest = { version = "0.11", features = ["cookies"]}
md-5 = "0.10"
scraper = "0.18"
regex = "1"
